<resources>
    <string name="app_name">ShieldAgentsEmployeeDatabase</string>
    <string name="add_a_new_department">Add a New Department</string>
    <string name="add_department">Add Department</string>
    <string name="go_to_home">Go to Home</string>
    <string name="s_h_i_e_l_d_departments">S.H.I.E.L.D Departments</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="update_employee">Update Employee</string>
    <string name="view_all_s_h_i_e_l_d_agents">View All S.H.I.E.L.D. Agents</string>
    <string name="add_new_agent">Add New Agent</string>
    <string name="go_to_filter_employee_activity">Go to Filter Employee Activity</string>
    <string name="s_h_i_e_l_d_agents">S.H.I.E.L.D. Agents</string>
    <string name="update_agent">Update Agent</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_employee_list">EmployeeListActivity</string>
    <string name="filter_activity">Filter Activity</string>
    <string name="s_h_i_e_l_d">S.H.I.E.L.D.</string>
    <string name="shield_marvelstudio_com">shield@marvelstudio.com</string>
    <string name="submit">Submit</string>
    <string name="filter_employees">Filter Employees</string>
</resources>
