<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_create_new_folder_black"
            android:title="@string/add_new_employee" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_delete_forever_black"
            android:title="@string/delete_employee" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_system_update_alt_black"
            android:title="@string/update_employee" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_search_black"
            android:title="@string/filter_activity" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>



</menu>
