<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterEmployeeActivity">



    <TextView
        android:id="@+id/tvFilterTitle"
        android:text="Filter by Department:"
        style="@style/StandardTextStyle"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerDepartments"/>

    <Spinner
        android:id="@+id/spinnerDepartments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvFilterTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnFilter"
        android:text="@string/filter_employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvFilterTitle"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/btnFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAddNewEmployee"
        android:text="@string/add_new_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnViewEmployees"
        android:text="@string/view_all_s_h_i_e_l_d_agents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddNewEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>


</androidx.constraintlayout.widget.ConstraintLayout>