<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeDetailsActivity">

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvStreetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvStreetAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTaxId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvZip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvTaxId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/StandardTextStyle"
        app:layout_constraintTop_toBottomOf="@id/tvPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnUpdateEmployee"
        android:text="@string/update_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDepartment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnDeleteEmployee"
        android:text="@string/delete_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnUpdateEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnHome"
        android:text="@string/go_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnDeleteEmployee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>